syntax = "proto3";

import "enums.proto";

option go_package = ".;pb";
package account;

message User {
    int64 id = 1;
    string name = 2;
    string password = 3;
    string avatar = 4;
    enums.UserStatusEnum.Status status = 5;
    int64 score = 6;
    string banned_reason = 7;
    int64 create_time = 8;
    int64 last_update=9;
    enums.UserRoleEnum.Role role=10;
}

message UserRequest {
    int64 id = 1;
}

message SignUpRequest {
    string name=1;
    string password=2;
    // string ip = 3;
}

message SignUpReply {
    int64 id=1;
}

message SignInRequest{
    string name=1;
    string password=2;
}

message SignInReply{
    int64 id=1;
}

//通过ids获取user,id为post_id,comment_id,reply_id
message UsersRequest{
    repeated int64 ids=1 [packed=true];
    //0为post 1为comment 2为reply
    int64 idType=2;
}

message UsersReply{
    repeated User users=1;
}

//通过user_ids获取users
message UsersByUserIdsRequest{
    repeated int64 ids=1 [packed=true];
}

message UsersByUserIdsReply{
    repeated User users=1;
}


service Account {
    rpc GetUser (User) returns (User) {
    }
    rpc SignUp (SignUpRequest) returns (SignUpReply) {
    }
    rpc EditUser (User) returns (User) {
    }
    rpc SignIn (SignInRequest) returns (SignInReply){
    }
    rpc GetUsersByIds(UsersRequest) returns(UsersReply){}
    rpc GetUsersByUserIds(UsersByUserIdsRequest) returns(UsersByUserIdsReply){}
}