syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = ".;pb";
package stock;

message SubscribeStockRequest {
    int64 user_id=1;
    int64 stock_id=2;
}

message UnSubscribeStockRequest {
    int64 user_id=1;
    int64 stock_id=2;
}

message TradeData {
    string date=1;
    float end_price=2;
    int64 volumn=3;
    int64 xueqiu_count=4;
}

message StockData {
    int64 id=1;
    string symbol=2;
    string name=3;
    repeated TradeData trade_data=4;
}

message SubscribeStockTradeRequest {
    int64 user_id=1;
}

message SubscribeStockTradeReply {
    repeated StockData data=1;
}

message SearchStockRequest {
    string symbolorname=1;
}

message SearchStockReply {
    repeated StockData stocks=1;
}

service StockService{
    rpc SubscribeStock(SubscribeStockRequest) returns(google.protobuf.Empty){}
    rpc UnSubscribeStock(UnSubscribeStockRequest) returns(google.protobuf.Empty){}
    rpc SubscribeStockTrade(SubscribeStockTradeRequest) returns(SubscribeStockTradeReply){}
    rpc SearchStock(SearchStockRequest) returns(SearchStockReply){}
}